# test-teamcity

./: .gitignore  CMakeLists.txt  README.md
cmake/: warnings.cmake
include/mylib/: math.hpp
src/: main.cpp  math.cpp
tests/: CMakeLists.txt  math_tests.cpp
